istio-simplegrpc/deploy/networking/simplegrpc-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-simplegrpc-gateway
  namespace: istio-ns
spec:
  selector:
    istio: ingressgateway # use istio default controller, gateway资源可以gateway pod不在同一个namespace
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.istio-simplegrpc.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-simplegrpc-gateway-virtualservice
  namespace: istio-ns
spec:
  hosts:
  - "www.istio-simplegrpc.com" # 这里是外部能访问的域名或地址
  gateways:
  - istio-simplegrpc-gateway # 这个virtual server对应gateway，gateway出来的流量怎么匹配
  http:
  - match:
    - uri:
        exact: /v1/say
    - uri:
        exact: /v1/reservations
    - uri:
        prefix: /person
    route:
    - destination:
        host: istio-simplegrpc.istio-ns.svc.cluster.local # kubernetes的服务
        subset: v1
        port:
          number: 8081
    fault:  #测试故障注入，50%的失败，从网关到后端服务的失败注入，精准控制失败比例
      abort:
        percentage:
          value: 10
        httpStatus: 400 
      delay:
        percentage:
          value: 50
        fixedDelay: 5s
