istio-simplegrpc/deploy/networking/virtual-service-simplegrpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-ns
  name: istio-simplegrpc-virtualservice
spec:
  hosts:
  - istio-simplegrpc.istio-ns.svc.cluster.local
  http:
  - match:
    - uri:
        #exact: /helloworld.Greeter/SayHello
        prefix: /helloworld.Greeter
    route:
    - destination:
        host: istio-simplegrpc.istio-ns.svc.cluster.local
        subset: v1
  - route:
    - destination:
        host: istio-simplegrpc.istio-ns.svc.cluster.local
        subset: v1 
#    fault:  #测试故障注入，千分之5的失败
#      abort:
#        percentage:
#          value: 0.5
#        httpStatus: 400      
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: istio-ns
  name: istio-simplegrpc-greeter-destination-rule  
spec:
  host: istio-simplegrpc.istio-ns.svc.cluster.local
  trafficPolicy: #默认的负载均衡策略
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: v1
    labels:
      version: v1
